--- a/Werka/style.css
+++ b/Werka/style.css
@@ -58,6 +58,11 @@ a:focus {
   color: var(--dark-gray-color);
 }
 
+section {
+  opacity: 0;
+  transition: 0.7s opacity ease-in-out;
+}
+
 /* NAV */
 
 #myBtn {
@@ -771,4 +776,8 @@ a:focus {
     opacith: 1;
     transform: translateX(0);
   }
+}
+
+.show {
+  opacity: 1;
 }
